--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"firebase": "^7.9.3",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
+		"react-icons": "^3.9.0",
 		"react-lottie": "^1.2.3",
 		"react-scripts": "3.4.0",
 		"styled-components": "^5.0.1"
@@ -38,7 +39,7 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^2.0.1",
+		"gh-pages": "^2.2.0",
 		"node-sass": "^4.13.1",
 		"sass-extract": "^2.1.0",
 		"sass-extract-js": "^0.4.0",
