--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.4.1",
 		"@testing-library/user-event": "^7.2.1",
-		"firebase": "^7.9.3",
+		"firebase": "^7.11.0",
+		"fisher-yates": "^1.0.3",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
 		"react-icons": "^3.9.0",
 		"react-lottie": "^1.2.3",
+		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.0",
 		"styled-components": "^5.0.1"
 	},
